Hashing and Compare Password for Login

--- a/views/partial/_navbar.ejs
+++ b/views/partial/_navbar.ejs
@@ -2,4 +2,5 @@
     <a href="/tickets">List of Ticket || </a>
     <a href="/orders">My Order || </a>
     <a href="/register">Registration</a>
+    <a href="/login">Login</a>
 </nav>
