--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form action="/" method="post">
+    <form action="/login" method="post">
         <br><br>
         <label for="email">Username</label>
         <input type="text" name="email" id="email" placeholder="e.g blablabla@mail.net" required>
