menambah fitur edit profile

--- a/views/listOrders.ejs
+++ b/views/listOrders.ejs
@@ -6,6 +6,8 @@
     <title>List of Order Page</title>
 </head>
 <body>
+    <%- include('partial/_navbar') %> 
+
     <table>
         <thead>
             <th>
