--- a/views/partial/_navbar.ejs
+++ b/views/partial/_navbar.ejs
@@ -1,5 +1,6 @@
 <nav>
     <a href="/tickets">List of Ticket || </a>
     <a href="/orders">My Order || </a>
-    <a href="/register">Registration</a>
+    <a href="/register">Registration || </a>
+    <a href="/edit/profile">Edit Profile</a>
 </nav>
