--- a/views/listTicket.ejs
+++ b/views/listTicket.ejs
@@ -17,9 +17,7 @@
             <th>
                 Depart Time
             </th>
-            <th>
-                Depart Point
-            </th>
+            
             <th>
                 Arrival
             </th>
@@ -42,12 +40,11 @@
                 <tr>
                     <td><%= el.Departure %> </td>
                     <td><%= el.DepartTime %> </td>
-                    <td><%= el.DepartPoint %> </td>
                     <td><%= el.Arrival %> </td>
                     <td><%= el.ArriveTime %> </td>
                     <td><%= el.Seats %> </td>
                     <td><%= el.Price %> </td>
-                    <td><input type="submit" value="BUY"> <a href="/maps"> || View Map</a> </td>
+                    <td><input type="submit" value="BUY"> <a href="https://www.google.com/maps/dir/?api=1&destination=<%= el.DepartPoint %>" target="_blank"> || View Map</a> </td>
 
                 </tr>
             </form>
