--- a/views/listTicket.ejs
+++ b/views/listTicket.ejs
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        <%-include('../styles/main.css') %>
+    </style>
     <title>List of Ticket Page</title>
 </head>
 <body>
@@ -50,7 +53,7 @@
             </form>
            <% }) %>
         </tbody>
-    </table>
-    
+    </table><br><br><br><br>
+    <%- include('partial/_footer') %> 
 </body>
 </html>
