--- a/styles/form.css
+++ b/styles/form.css
@@ -1,11 +1,19 @@
 
-body {font-family: Arial, Helvetica, sans-serif;}
-form {border: 3px solid #f1f1f1; max-width: 330px;margin:auto;}
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-image:url('https://github.com/MozartMongi/JSTrans/raw/development/roadtrip-01.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;  
+    background-size: 100%;
+    background-size: cover;
+}
+
+form {border: 3px solid #f1f1f1; max-width: 330px;margin:auto; background-color: rgb(255, 255, 255);}
 
 input[type=text], input[type=password] {
     width: 300px;
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: 8px auto;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
