--- a/views/partial/_navbar.ejs
+++ b/views/partial/_navbar.ejs
@@ -1,8 +1,45 @@
-<nav>
-    <a href="/">Home Page || </a>
-    <a href="/tickets">List of Ticket || </a>
-    <a href="/orders">My Order || </a>
-    <a href="/edit/profile">Edit Profile || </a>
-    <a href="/register">Registration || </a>
-    <a href="/login">Login</a>
-</nav>
+<style>
+    body {margin: 0;}
+    
+    ul.topnav {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #333;
+    }
+    
+    ul.topnav li {float: left;}
+    
+    ul.topnav li a {
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+    
+    ul.topnav li a:hover:not(.active) {background-color: #111;}
+    
+    ul.topnav li a.active {background-color: #4CAF50;}
+    
+    ul.topnav li.right {float: right;}
+    
+    @media screen and (max-width: 600px) {
+      ul.topnav li.right, 
+      ul.topnav li {float: none;}
+    }
+</style>
+
+
+<ul class="topnav">
+    <li><a class="active" href="/">Home Page</a></li>
+    <li><a href="/tickets">List of Ticket</a></li>
+    <li><a href="/orders">My Order</a></li>
+    <li><a href="/edit/profile">Edit Profile</a></li>
+    <li class="right"><a href="/logout">Logout</a></li>
+    <li class="right"><a href="/register">Register</a></li>
+    <li class="right"><a href="/login">Login</a></li>
+
+</ul>
+
