--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -6,7 +6,7 @@
     <style>
          <%-include('../styles/form.css') %>
     </style>
-    <title>Edit Profile Page</title>
+    <title>JSTrans | Edit Profile</title>
 </head>
 <body>
     <%- include('partial/_navbar') %> 
