--- a/views/formRegist.ejs
+++ b/views/formRegist.ejs
@@ -6,7 +6,7 @@
     <style>
         <%-include('../styles/form.css') %>
    </style>
-    <title>Form Registration</title>
+    <title>JSTrans | Register</title>
     
 </head>
 <body>
