--- a/views/listOrders.ejs
+++ b/views/listOrders.ejs
@@ -6,7 +6,7 @@
     <style>
         <%-include('../styles/main.css') %>
     </style>
-    <title>List of Order Page</title>
+    <title>JSTrans | Booking List</title>
 </head>
 <body>
     <header>
