--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,7 @@
   <style>
       <%-include('../styles/form.css') %>
   </style>
+  <title>JSTrans | Login</title>
 </head>
 <body>
   <%- include('partial/_navbar') %> 
