--- a/views/partial/_navbar.ejs
+++ b/views/partial/_navbar.ejs
@@ -33,9 +33,9 @@
 
 
 <ul class="topnav">
-    <li><a class="active" href="/">Home Page</a></li>
-    <li><a href="/tickets">List of Ticket</a></li>
-    <li><a href="/orders">My Order</a></li>
+    <li><a class="active" href="/"><b>JSTrans.</b></a></li>
+    <li><a href="/tickets">Schedule</a></li>
+    <li><a href="/orders">Booking List</a></li>
     <li><a href="/edit/profile">Edit Profile</a></li>
     <li class="right"><a href="/logout">Logout</a></li>
     <li class="right"><a href="/register">Register</a></li>
