--- a/views/listTicket.ejs
+++ b/views/listTicket.ejs
@@ -6,7 +6,7 @@
     <style>
         <%-include('../styles/main.css') %>
     </style>
-    <title>List of Ticket Page</title>
+    <title>JSTrans | Schedule</title>
 </head>
 <body>
     <%- include('partial/_navbar') %> 
